# amsatop-template

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: classroom.yml  lint.yml  test.yml
src/myhtop/: amsatop_solution.py  htop_linux.py  main.py
test/: README.md  conftest.py  setup.sh  test.sh
test/prac_2_1/: test_get_processes.py
test/prac_2_1/empty/: proc.json
test/prac_2_1/one/: proc.json
test/prac_2_1/one/17571/task/17571/: stat
test/prac_2_1/one/17573/: status
test/prac_2_1/one/17573/task/17575/: status
test/prac_2_1/one/17574/: stat
test/prac_2_1/one/17574/task/17574/: status
test/prac_2_1/one/17575/task/17573/: stat
test/prac_2_1/one/17575/task/17574/: stat
test/prac_2_1/one/17575/task/17575/: stat
test/prac_2_1/three/: proc.json
test/prac_2_1/three/17571/task/17571/: status
test/prac_2_1/three/17573/: stat
test/prac_2_1/three/17573/task/17575/: auxv
test/prac_2_1/three/17575/: stat
test/prac_2_1/two/: proc.json
test/prac_2_1/two/2/: stat  status
test/prac_2_1/two/2/task/2/: status
test/prac_2_1/two/66665/: stat
test/prac_2_1/two/66665/task/66665/: auxv  status
test/prac_2_1/two/66665/task/66667/: stat  status
test/prac_2_1/two/66667/: stat
test/prac_2_2/: test_get_priorities.py  test_list_processes.py
test/prac_2_2/five/: proc.json
test/prac_2_2/five/20846/: stat  status
test/prac_2_2/five/20847/: auxv  stat
test/prac_2_2/four/: proc.json
test/prac_2_2/four/17862/: auxv  status
test/prac_2_2/six/: proc.json
test/prac_2_2/six/24171/: stat
test/prac_2_2/six/24172/: stat
test/prac_2_3/: copy_proc.py  test_list_processes.py  test_no_hup.py
test/prac_2_3/seven/: proc.json
test/prac_2_3/seven/30599/: status
test/prac_2_3/seven/30601/: stat  status
test/prac_2_3/seven/30602/: stat
(+16 files in other folders)
